grafana-route.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: grafana
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "grafana.pinjyun.local"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana
spec:
  hosts:
  - "grafana.pinjyun.local"
  gateways:
  - grafana
  http:
  - route:
    - destination:
        host: prometheus-operator-grafana.kube-mon.svc.cluster.local
        port:
          number: 80
